--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UserInfo"></activity>
+        <activity android:name=".AddFood"></activity>
+        <activity android:name=".UserInfo" />
         <activity android:name=".OverView" />
         <activity android:name=".CreateAccount" />
         <activity android:name=".MainActivity">
